[gd_scene load_steps=13 format=1]

[ext_resource path="res://menu/choose.gd" type="Script" id=1]
[ext_resource path="res://menu/uibg.png" type="Texture" id=2]
[ext_resource path="res://fonts/marshmallows-and-chocolate.fnt" type="BitmapFont" id=3]
[ext_resource path="res://menu/highliter.png" type="Texture" id=4]
[ext_resource path="res://game/plane/planeBlue1.png" type="Texture" id=5]
[ext_resource path="res://game/plane/planeGreen1.png" type="Texture" id=6]
[ext_resource path="res://game/plane/planeRed1.png" type="Texture" id=7]
[ext_resource path="res://game/plane/planeYellow1.png" type="Texture" id=8]
[ext_resource path="res://game/background/groundDirt.png" type="Texture" id=9]
[ext_resource path="res://game/background/groundGrass.png" type="Texture" id=10]
[ext_resource path="res://game/background/groundStone.png" type="Texture" id=11]
[ext_resource path="res://menu/buttonSmall.png" type="Texture" id=12]

[node name="RootNode" type="Node"]

script/script = ExtResource( 1 )

[node name="Panel" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 768.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
__meta__ = { "_edit_lock_":true }

[node name="ChooseLabel" type="Label" parent="Panel"]

rect/scale = Vector2( 1.5, 1.5 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 370.0
margin/top = 30.0
margin/right = 565.0
margin/bottom = 105.0
custom_fonts/font = ExtResource( 3 )
text = "Choose"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PlaneSelector" type="Sprite" parent="Panel"]

transform/pos = Vector2( 90, 200 )
texture = ExtResource( 4 )
offset = Vector2( 40, 30 )
modulate = Color( 0.886719, 0.533417, 0.657624, 1 )

[node name="EnvironmentSelector" type="Sprite" parent="Panel"]

transform/pos = Vector2( 30, 480 )
transform/scale = Vector2( 2.5, 0.75 )
texture = ExtResource( 4 )
offset = Vector2( 55, 0 )
modulate = Color( 0.531219, 0.689318, 0.804688, 1 )

[node name="PlaneBlue" type="TextureButton" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 200.0
margin/right = 178.0
margin/bottom = 273.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )

[node name="PlaneGreen" type="TextureButton" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 330.0
margin/top = 200.0
margin/right = 418.0
margin/bottom = 273.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )

[node name="PlaneRed" type="TextureButton" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 560.0
margin/top = 200.0
margin/right = 648.0
margin/bottom = 273.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )

[node name="PlaneYellow" type="TextureButton" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 820.0
margin/top = 200.0
margin/right = 908.0
margin/bottom = 273.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )

[node name="GroundDirt" type="TextureButton" parent="Panel"]

rect/scale = Vector2( 0.35, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 480.0
margin/right = 838.0
margin/bottom = 551.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )

[node name="GroundGrass" type="TextureButton" parent="Panel"]

rect/scale = Vector2( 0.35, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 370.0
margin/top = 480.0
margin/right = 1178.0
margin/bottom = 551.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 10 )

[node name="GroundStone" type="TextureButton" parent="Panel"]

rect/scale = Vector2( 0.35, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 710.0
margin/top = 480.0
margin/right = 1518.0
margin/bottom = 551.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )

[node name="PlayButton" type="TextureButton" parent="Panel"]

rect/rotation = 0.156974
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 740.0
margin/top = 610.0
margin/right = 880.0
margin/bottom = 695.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
__meta__ = { "_edit_group_":true }

[node name="PlayLabel" type="Label" parent="Panel/PlayButton"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 132.0
margin/bottom = 75.0
custom_fonts/font = ExtResource( 3 )
text = "Play"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BackButton" type="TextureButton" parent="Panel"]

rect/rotation = 0.156974
rect/scale = Vector2( 1.1, 1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 210.0
margin/top = 610.0
margin/right = 350.0
margin/bottom = 695.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 12 )
__meta__ = { "_edit_group_":true }

[node name="BackLabel" type="Label" parent="Panel/BackButton"]

rect/scale = Vector2( 0.9, 1 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 132.0
margin/bottom = 75.0
custom_fonts/font = ExtResource( 3 )
text = "Back"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="Panel/PlaneBlue" to="." method="_on_PlaneBlue_pressed"]

[connection signal="pressed" from="Panel/PlaneGreen" to="." method="_on_PlaneGreen_pressed"]

[connection signal="pressed" from="Panel/PlaneRed" to="." method="_on_PlaneRed_pressed"]

[connection signal="pressed" from="Panel/PlaneYellow" to="." method="_on_PlaneYellow_pressed"]

[connection signal="pressed" from="Panel/GroundDirt" to="." method="_on_GroundDirt_pressed"]

[connection signal="pressed" from="Panel/GroundGrass" to="." method="_on_GroundGrass_pressed"]

[connection signal="pressed" from="Panel/GroundStone" to="." method="_on_GroundStone_pressed"]

[connection signal="pressed" from="Panel/PlayButton" to="." method="_on_PlayButton_pressed"]

[connection signal="pressed" from="Panel/BackButton" to="." method="_on_BackButton_pressed"]


